fix: form reset + spacing

--- a/src/global.css
+++ b/src/global.css
@@ -152,7 +152,8 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .slider__right-value {
-    right: -4px;
+    text-align: right;
+    right: 0;
 }
 
 /* Removing the default appearance */
